增加使用Path绘制返回箭头。

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -30,4 +30,9 @@
             <enum name="scale" value="2" />
         </attr>
     </declare-styleable>
+
+    <declare-styleable name="BackArrowView">
+        <attr name="bav_color" format="color" />
+        <attr name="bav_stroke_width" format="integer|float|dimension" />
+    </declare-styleable>
 </resources>
