--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/rotate_dot_view"
         android:layout_width="28dp"
         android:layout_height="28dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -54,10 +54,23 @@
         app:rlv_start_color="@color/dotColor" />
 
     <com.zh.cavas.sample.PathMeasureView
+        android:id="@+id/path_measure_loading"
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/loading_shape" />
+        app:layout_constraintTop_toBottomOf="@id/loading_shape"
+        tools:background="@android:color/darker_gray" />
+
+    <com.zh.cavas.sample.BackArrowView
+        android:id="@+id/back_arrow"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="20dp"
+        app:bav_color="@android:color/black"
+        app:bav_stroke_width="1.5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/path_measure_loading" />
 </androidx.constraintlayout.widget.ConstraintLayout>
