--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -35,4 +35,16 @@
         <attr name="bav_color" format="color" />
         <attr name="bav_stroke_width" format="integer|float|dimension" />
     </declare-styleable>
+
+    <declare-styleable name="MoreActionView">
+        <!-- 点的颜色 -->
+        <attr name="mav_color" format="color" />
+        <!-- 点大小 -->
+        <attr name="mav_dot_radius" format="integer|float|dimension" />
+        <!-- 排列方向，水平或垂直 -->
+        <attr name="mav_orientation" format="enum">
+            <enum name="horizontal" value="1" />
+            <enum name="vertical" value="2" />
+        </attr>
+    </declare-styleable>
 </resources>
