--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <com.zh.cavas.sample.RotateDotView
+    <com.zh.cavas.sample.widget.RotateDotView
         android:id="@+id/rotate_dot_view"
         android:layout_width="28dp"
         android:layout_height="28dp"
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:rdv_start_color="@android:color/darker_gray" />
 
-    <com.zh.cavas.sample.RotateDotView
+    <com.zh.cavas.sample.widget.RotateDotView
         android:id="@+id/rotate_dot_view_scale"
         android:layout_width="28dp"
         android:layout_height="28dp"
@@ -40,7 +40,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rotate_dot_view_scale" />
 
-    <com.zh.cavas.sample.RingLoadingView
+    <com.zh.cavas.sample.widget.RingLoadingView
         android:id="@+id/loading_shape"
         android:layout_width="30dp"
         android:layout_height="30dp"
@@ -53,7 +53,7 @@
         app:rlv_ring_width="2.3dp"
         app:rlv_start_color="@color/dotColor" />
 
-    <com.zh.cavas.sample.PathMeasureView
+    <com.zh.cavas.sample.widget.PathMeasureView
         android:id="@+id/path_measure_loading"
         android:layout_width="65dp"
         android:layout_height="65dp"
@@ -63,7 +63,7 @@
         app:layout_constraintTop_toBottomOf="@id/loading_shape"
         tools:background="@android:color/darker_gray" />
 
-    <com.zh.cavas.sample.BackArrowView
+    <com.zh.cavas.sample.widget.BackArrowView
         android:id="@+id/back_arrow"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -74,7 +74,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/path_measure_loading" />
 
-    <com.zh.cavas.sample.MoreActionView
+    <com.zh.cavas.sample.widget.MoreActionView
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginTop="20dp"
