--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -54,4 +54,20 @@
         <!-- 线高 -->
         <attr name="amv_line_height" format="integer|float|dimension" />
     </declare-styleable>
+
+    <declare-styleable name="CloseView">
+        <!-- 线的颜色 -->
+        <attr name="cv_color" format="color" />
+        <!-- 线高 -->
+        <attr name="cv_line_width" format="integer|float|dimension" />
+        <!-- 模式，普通模式、圆边模式 -->
+        <attr name="cv_mode" format="enum">
+            <enum name="normal" value="1" />
+            <enum name="circle" value="2" />
+        </attr>
+        <!-- 圆的边颜色 -->
+        <attr name="cv_circle_color" format="color"/>
+        <!-- 圆的边线宽 -->
+        <attr name="cv_circle_line_width" format="integer|float|dimension" />
+    </declare-styleable>
 </resources>
