--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:osd_enable="true">
+    app:osd_enable="false">
 
     <com.lzy.widget.vertical.VerticalScrollView
         android:layout_width="match_parent"
@@ -78,6 +78,13 @@
                 app:cv_color="@android:color/black"
                 app:cv_line_width="1.5dp"
                 app:cv_mode="normal" />
+
+            <com.zh.cavas.sample.widget.AndroidSearchView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="20dp"
+                app:asv_color="@android:color/black"
+                app:asv_line_width="1.5dp" />
 
             <SeekBar
                 android:layout_width="match_parent"
