--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -32,8 +32,17 @@
     </declare-styleable>
 
     <declare-styleable name="BackArrowView">
+        <!-- 箭头颜色 -->
         <attr name="bav_color" format="color" />
+        <!-- 箭头线宽 -->
         <attr name="bav_stroke_width" format="integer|float|dimension" />
+        <!-- 模式 -->
+        <attr name="bav_arrow_style" format="enum">
+            <!-- Google Material Design -->
+            <enum name="material_design" value="1" />
+            <!-- 微信风格 -->
+            <enum name="wechat_design" value="2" />
+        </attr>
     </declare-styleable>
 
     <declare-styleable name="MoreActionView">
