--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -95,4 +95,15 @@
         <!-- 音轨线宽粗细 -->
         <attr name="cmlv_line_width" format="integer|float|dimension" />
     </declare-styleable>
+
+    <declare-styleable name="RestartView">
+        <!-- 线的数量 -->
+        <attr name="rtv_line_count" format="integer" />
+        <!-- 背景的圆的颜色 -->
+        <attr name="rtv_bg_circle_color" format="color" />
+        <!-- 线的颜色 -->
+        <attr name="rtv_line_color" format="color" />
+        <!-- 线的线宽粗细 -->
+        <attr name="rtv_line_width" format="integer|float|dimension" />
+    </declare-styleable>
 </resources>
